feat: add full deal workspace crud tabs
